--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       fieldset.layui-elem-field.layui-field-title {margin: 0 0 0 0}
       div.layui-layer.layui-layer-dialog {width: 600px !important}
     </style>
-    <script src="/layui/layui.js" type="text/javascript"></script>
+    <script src="/layui/layui.all.js" type="text/javascript"></script>
   </head>
   <body>
     <blockquote class="layui-elem-quote">
