--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <blockquote class="layui-elem-quote">
-      在下面选择并展开一个项目
+      请在下面选择并展开一个项目
     </blockquote>
     <div style="padding: 10px; border-color: #ffffff; border-width: 0px">
       <div class="layui-collapse" lay-accordion>
@@ -620,6 +620,8 @@
     <p align="center" style="color: #ff0000">
       请记住: 使用破解版出版商业作品是一种耻辱.
     </p>
+    <p align="centre">
+    <a href="/ref/blog.html">回到主站-CharCai's Blog</a>
     <p align="center">
     </p>
     <script type="text/javascript">
