--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 
 <html>
+  <script>
+  var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?da6ed0cbc06443c2e61658034d194d97";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
   <head>
     <meta charset="utf-8">
     <meta name="keywords" content="FL Studio 20 破解补丁,FL Studio 12 破解补丁,FLStudio 12 注册文件,FL Studio 12 Crack,FL Studio 12 Keygen,FL Studio 12 Regcode">
@@ -15,7 +24,7 @@
       fieldset.layui-elem-field.layui-field-title {margin: 0 0 0 0}
       div.layui-layer.layui-layer-dialog {width: 600px !important}
     </style>
-    <script src="/layui/layui.all.js" type="text/javascript"></script>
+    <script src="/layui/layui.js" type="text/javascript"></script>
   </head>
   <body>
     <blockquote class="layui-elem-quote">
