--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
     <p align="center" style="color: #ff0000">
       请记住: 使用破解版出版商业作品是一种耻辱.
     </p>
-    <p align="centre">
+    <p align="centre" style="color: #333333">
     	<a href="/ref/blog.html">回到主站-CharCai's Blog</a>
     </p>
     <script type="text/javascript">
