--- a/index.html
+++ b/index.html
@@ -1,30 +1,17 @@
 
 <html>
   <head>
-    <script>
-      var _hmt = _hmt || [];
-        (function() {
-          var hm = document.createElement("script");
-          hm.src = "https://hm.baidu.com/hm.js?da6ed0cbc06443c2e61658034d194d97";
-          var s = document.getElementsByTagName("script")[0]; 
-          s.parentNode.insertBefore(hm, s);
-      })();
-    </script>
-    <meta charset="utf-8">
-    <meta name="keywords" content="FL Studio 20 破解补丁,FL Studio 12 破解补丁,FLStudio 12 注册文件,FL Studio 12 Crack,FL Studio 12 Keygen,FL Studio 12 Regcode">
-    <title>
-      FL Studio 20 破解补丁 - FL Studio 12 破解补丁 - FL Studio 12 注册码 - FL Studio 12 注册文件 - FL Studio 20 Crack - FL Studio 12 Crack - FL Studio 12 Keygen - FL Studio 12 Regcode
-    </title>
-    <link rel="stylesheet" href="/layui/css/layui.css" media="all" type="text/css">
-    <style type="text/css">
-      /* body {font-family: Arial, "微软雅黑"} */
-      blockquote.layui-elem-quote {font-size: 200%; line-height: 175%; margin-bottom: 0}
-      p.layui-colla-title {font-size: 150%; height: 60px; line-height: 60px; padding: 0 0 0 50px}
-      i.layui-colla-icon {font-size: 110%}
-      fieldset.layui-elem-field.layui-field-title {margin: 0 0 0 0}
-      div.layui-layer.layui-layer-dialog {width: 600px !important}
-    </style>
-    <script src="/layui/layui.all.js" type="text/javascript"></script>
+<script>var _hmt = _hmt || [];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?a60ba8f185448c470ca41442429caddd";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm, s);})();</script>
+    <meta charset="utf-8"><meta name="keywords" content="FL Studio 20 破解补丁,FL Studio 12 破解补丁,FLStudio 12 注册文件,FL Studio 12 Crack,FL Studio 12 Keygen,FL Studio 12 Regcode">
+<title>FL Studio 20 破解补丁 - FL Studio 12 破解补丁 - FL Studio 12 注册码 - FL Studio 12 注册文件 - FL Studio 20 Crack - FL Studio 12 Crack - FL Studio 12 Keygen - FL Studio 12 Regcode</title>
+<link rel="stylesheet" href="/layui/css/layui.css" media="all" type="text/css">
+<style type="text/css">
+blockquote.layui-elem-quote {font-size: 200%; line-height: 175%; margin-bottom: 0}
+p.layui-colla-title {font-size: 150%; height: 60px; line-height: 60px; padding: 0 0 0 50px}
+i.layui-colla-icon {font-size: 110%}
+fieldset.layui-elem-field.layui-field-title {margin: 0 0 0 0}
+div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
+<script src="/layui/layui.all.js" type="text/javascript"></script>
   </head>
   <body>
     <blockquote class="layui-elem-quote">
