--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
     </p>
     <br>
     <br>
-    <p align="centre" style="color: #333333">
+    <p align="center" style="color: #333333">
     	<a href="/ref/blog.html">回到主站-CharCai's Blog</a>
     </p>
     <script type="text/javascript">
