--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-
+﻿
 <html>
   <head>
-<script>var _hmt = _hmt || [];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?a60ba8f185448c470ca41442429caddd";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm, s);})();</script>
     <meta charset="utf-8"><meta name="keywords" content="FL Studio 20 破解补丁,FL Studio 12 破解补丁,FLStudio 12 注册文件,FL Studio 12 Crack,FL Studio 12 Keygen,FL Studio 12 Regcode">
 <title>FL Studio 20 破解补丁 - FL Studio 12 破解补丁 - FL Studio 12 注册码 - FL Studio 12 注册文件 - FL Studio 20 Crack - FL Studio 12 Crack - FL Studio 12 Keygen - FL Studio 12 Regcode</title>
 <link rel="stylesheet" href="/layui/css/layui.css" media="all" type="text/css">
@@ -715,18 +714,8 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
         content: '<img src="https://s1.ax1x.com/2018/07/28/PaPHNq.png">'
         })
       };
-      
-    </script>
-    <script type="text/javascript">
-      function getParam(paramName) {
-        paramValue = "", isFound = !1;
-        if (this.location.search.indexOf("?") == 0 && this.location.search.indexOf("=") > 1) {
-            arrSource = unescape(this.location.search).substring(1, this.location.search.length).split("&"), i = 0;
-            while (i < arrSource.length && !isFound) arrSource[i].indexOf("=") > 0 && arrSource[i].split("=")[0].toLowerCase() == paramName.toLowerCase() && (paramValue = arrSource[i].split("=")[1], isFound = !0), i++
-        }
-        return paramValue == "" && (paramValue = null), paramValue
-      }
-      document.getElementById("g" + getParam("select")).className+=" layui-show";
-    </script>
+function getParam(paramName){paramValue="",isFound=!1;if(this.location.search.indexOf("?")==0&&this.location.search.indexOf("=")>1){arrSource=unescape(this.location.search).substring(1,this.location.search.length).split("&"),i = 0;while (i<arrSource.length && !isFound)arrSource[i].indexOf("=")>0&&arrSource[i].split("=")[0].toLowerCase()==paramName.toLowerCase()&&(paramValue = arrSource[i].split("=")[1],isFound=!0),i++}return paramValue=="" && (paramValue=null),paramValue}document.getElementById("g"+getParam("select")).className+=" layui-show";
+var _hmt = _hmt || [];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?a60ba8f185448c470ca41442429caddd";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm,s);})();
+</script>
   </body>
 </html>
