--- a/index.html
+++ b/index.html
@@ -714,8 +714,16 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
         content: '<img src="https://s1.ax1x.com/2018/07/28/PaPHNq.png">'
         })
       };
-function getParam(paramName){paramValue="",isFound=!1;if(this.location.search.indexOf("?")==0&&this.location.search.indexOf("=")>1){arrSource=unescape(this.location.search).substring(1,this.location.search.length).split("&"),i = 0;while (i<arrSource.length && !isFound)arrSource[i].indexOf("=")>0&&arrSource[i].split("=")[0].toLowerCase()==paramName.toLowerCase()&&(paramValue = arrSource[i].split("=")[1],isFound=!0),i++}return paramValue=="" && (paramValue=null),paramValue}document.getElementById("g"+getParam("select")).className+=" layui-show";
 var _hmt = _hmt || [];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?a60ba8f185448c470ca41442429caddd";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm,s);})();
-</script>
+      function getParam(paramName) {
+        paramValue = "", isFound = !1;
+        if (this.location.search.indexOf("?") == 0 && this.location.search.indexOf("=") > 1) {
+            arrSource = unescape(this.location.search).substring(1, this.location.search.length).split("&"), i = 0;
+            while (i < arrSource.length && !isFound) arrSource[i].indexOf("=") > 0 && arrSource[i].split("=")[0].toLowerCase() == paramName.toLowerCase() && (paramValue = arrSource[i].split("=")[1], isFound = !0), i++
+        }
+        return paramValue == "" && (paramValue = null), paramValue
+      }
+      document.getElementById("g" + getParam("select")).className+=" layui-show";
+    </script>
   </body>
 </html>
