--- a/index.html
+++ b/index.html
@@ -626,6 +626,11 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
     <p align="center" style="color: #333333">
     	<a href="/ref/blog.html">回到主站-CharCai's Blog</a>
     </p>
+    <br>
+    <br>
+    <p align="center" style="color: #333333">
+    <h5>FL Studio交流QQ群: 830368062. 欢迎加入！<h5>
+    </p>
     <script type="text/javascript">
       function show() {
         layer.open ({
