--- a/index.html
+++ b/index.html
@@ -18,6 +18,132 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
     </blockquote>
     <div style="padding: 10px; border-color: #ffffff; border-width: 0px">
       <div class="layui-collapse" lay-accordion>
+	<div class="layui-colla-item">
+          <p class="layui-colla-title">
+            FL Studio 20.0.4.629 免安装破解版
+          </p>
+          <div id="g7" class="layui-colla-content">
+            <p align="right"><a href="?select=7" target="_blank">选择器链接</a></p>
+            <fieldset class="layui-elem-field layui-field-title">
+              <legend>版本特色</legend>
+            </fieldset>
+            <table class="layui-table" lay-skin="nob">
+              <tbody>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;基于 FL Studio 20.0.4.629 官方安装程序整理, 集成 R2R 破解. 无任何阉割或精简.
+                  </th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;整合 Shared 目录组件; 下载管理器组件到 FL 目录.
+                  </th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;集成了 ASIO4ALL 2.14 与 FL Studio ASIO 作为可选 ASIO 驱动.
+                  </th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;由于官方不再为 FL Studio 集成下载管理器, 因此 GMS; Morphine; PoiZone; Sakura; Sawer; Toxic Biohazard 现在可以直接从插件的预置列表中选择.
+                  </th>
+                </tr>
+              </tbody>
+            </table>
+            <fieldset class="layui-elem-field layui-field-title">
+              <legend>解压方法</legend>
+            </fieldset>
+            <table class="layui-table" lay-skin="nob">
+              <tbody>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;下载后是 EXE 格式, 并且加上了数字签名, 用于确认压缩包是否完整. <button data-method="setTop" onclick="show()" class="layui-btn layui-btn-sm">查看演示</button>
+                  </th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;下载完毕后运行一次, 提示 "数字签名正常" 后方可更改扩展名. 扩展名可以是 rar; 7z 或 zip 等. <button data-method="setTop" onclick="show2()" class="layui-btn layui-btn-sm">查看演示</button>
+                  </th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;看不到扩展名请先修改系统设置. 参考 <a href="https://jingyan.baidu.com/article/b7001fe14f5cbe0e7282ddf5.html">https://jingyan.baidu.com/article/b7001fe14f5cbe0e7282ddf5.html</a>
+                  </th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;最后就可以用常规的解压工具解压了.
+                  </th>
+                </tr>
+              </tbody>
+            </table>
+            <fieldset class="layui-elem-field layui-field-title">
+              <legend>注意事项</legend>
+            </fieldset>
+            <table class="layui-table" lay-skin="nob">
+              <tbody>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;已经内置破解, 所以不要重新破解, 或者打入汉化补丁. 本版不支持汉化!!!
+                  </th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;正版用户不要尝试在 About 窗口中登录 Image-Line 账号.
+                  </th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th><strong>●&nbsp;&nbsp;目前所有 20 破解补丁都可能存在未能绕过的暗桩, 请进行长时间压力测试后再决定是否用于正式工作.</strong></th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th><strong>●&nbsp;&nbsp;已知 FL Studio 20 (Windows) 将逐渐不兼容早于 Windows 7 (6.1.7600) 的操作系统, 若仍然在这些系统下部署, 将在使用过程中异常退出或报错.</strong></th>
+                </tr>
+              </tbody>
+            </table>
+            <fieldset class="layui-elem-field layui-field-title">
+              <legend>下载地址</legend>
+            </fieldset>
+            <table class="layui-table" lay-skin="nob">
+              <tbody>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;<a class="layui-btn layui-btn" href="https://drive.google.com/open?id=1DqXJOi14P4xLBJ46kB18QTZVp6g5kXvX"><strong>下载地址 1 (谷歌网盘需要翻墙)</strong></a>
+                  </th>
+                </tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;<a class="layui-btn layui-btn" href="https://1drv.ms/u/s!AqJDCzhI3LndjhdGA2-fYoLl3Kaz"><strong>下载地址 2 (微软网盘可能需要翻墙, 可能视地区不同而不同)</strong></a>
+                  </th>
+                </tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;<a class="layui-btn layui-btn" href="http://yamatoryou.hopto.org:5000/sharing/krODeV5UM"><strong>下载地址 3 (不需要翻墙, 但只能使用浏览器下载)</strong></a>
+                  </th>
+                </tr>
+                <tr>
+                  <th width="30"></th>
+                  <th>
+                    ●&nbsp;&nbsp;<strong>百度网盘? 不存在的. 你马克丁举报成功算我输.</strong>
+                  </th>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
         <div class="layui-colla-item">
           <p class="layui-colla-title">
             FL Studio 20.0.3.532 免安装破解版
@@ -631,6 +757,18 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
     <p align="center" style="color: #333333">
     <h5>FL Studio交流QQ群: 830368062. 欢迎加入！<h5>
     </p>
+    <br>
+    <br>
+    <script src="http://wm.lrswl.com/page/s.php?s=285377&w=960&h=60"></script>
+<div id="version-info-tips" style="width: 300px; height: 150px; z-index: 0; background-color: #ffffff; border-radius: 2px; position: fixed; bottom: 20px; right: 20px; box-shadow: 1px 1px 50px rgba(0,0,0,0.3)">
+      <p style=" color: 666666; padding: 15 15 15 15">
+        FL Studio 最新版本概况:<br>
+        Windows: 20.0.4.629 (已破解)<br>
+        汉化补丁 (Windows): 12.3.0.73 <a href="http://www.hanzify.org/software/11694.html" target="_blank"><strong style="color: #009688">下载</strong></a><br>
+        macOS: 20.0.4.67 (暂无破解)<br>
+        Android: 3.1.941 (已破解, 本页暂无直链)<br>
+      </p>
+    </div>
     <script type="text/javascript">
       function show() {
         layer.open ({
