--- a/index.html
+++ b/index.html
@@ -755,11 +755,13 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
     <br>
     <br>
     <p align="center" style="color: #333333">
-    <h5>FL Studio交流QQ群: 830368062. 欢迎加入！<h5>
+    <h5>FL Studio交流QQ群: 830368062. 欢迎加入！</h5>
+	<br>
+	<br>
+	本页面转自Yamato Ryou大佬的<a href="//baidufl.tk">baidufl.tk</a>.
     </p>
     <br>
     <br>
-    <script src="http://wm.lrswl.com/page/s.php?s=285377&w=960&h=60"></script>
 <div id="version-info-tips" style="width: 300px; height: 150px; z-index: 0; background-color: #ffffff; border-radius: 2px; position: fixed; bottom: 20px; right: 20px; box-shadow: 1px 1px 50px rgba(0,0,0,0.3)">
       <p style=" color: 666666; padding: 15 15 15 15">
         FL Studio 最新版本概况:<br>
@@ -832,7 +834,7 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
         shadeClose: true,
         resize: false,
         area: ['805px', '461px'],
-        content: '<img src="https://s1.ax1x.com/2018/07/28/PaPttx.png">'
+        content: '<img src="https://s1.ax1x.com/2018/07/28/PaPttx.png">'Q群: 830368062. 欢迎加入！
         })
       };
 
@@ -857,6 +859,19 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
         content: '<img src="https://s1.ax1x.com/2018/07/28/PaPHNq.png">'
         })
       };
+	layer.open({
+      btn: '------------------------------------------------ 我知道了 ---------------------------------------------------',
+      closeBtn: 0,
+      btnAlign: 'c',
+      title: false,
+      moveType: '1',
+      shadeClose: false,
+      shade: 0.6,
+      resize: false,
+      type: '0',
+      area: '700px',
+      content: '<strong style="color: #FF0000">● 截至目前所有 FL Studio 20 "汉化版" 都是虚假宣传或欺骗, 本页也不会收录那些不专业的汉化补丁.<br>● 部分用户反映私有云下载到 99% 就失败, 此问题的原因不明. 可以多试几次或过段时间再试, 且只能使用浏览器内置的下载程序. 有条件的尽量使用翻墙方式下载.<br>● 近期网络上出现了版本号为 20.0.3.542 的安装程序, 经测实为思杰马克丁用于引流的修改版, 本页已给出破解方法, 请勿直接使用.</strong><br>● 部分访客反映本站已被 Firefox 及 Chrome 标记为危险网站, 请选择忽略. 作者不解决此问题.<br>● 本站的服务器不稳定, 有时会离线导致本页无法访问. 若有需要, 请保存本页到本地备用.<br>● 本页不提供原版安装程序, 若有需要请前往<a href="https://www.image-line.com/downloads/flstudiodownload.html" target="_blank"><strong style="color: #009688">官方下载页面</strong></a><br>本站QQ群: 830368062. 欢迎加入！'
+      });
 var _hmt = _hmt || [];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?a60ba8f185448c470ca41442429caddd";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm,s);})();
      function getParam(paramName) {
         paramValue = "", isFound = !1;
