--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
     </p>
     <br>
     <br>
-    <p align="center" style="color: #333333">
+    <p align="center" style="color: #333333" target="_blank">
     	<a href="/ref/blog.html">回到主站-CharCai's Blog</a>
     </p>
     <br>
