--- a/index.html
+++ b/index.html
@@ -871,7 +871,6 @@ div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
         content: '<img src="https://s1.ax1x.com/2018/07/28/PaPHNq.png">'
         })
       };
-var _hmt=_hmt||[];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?a60ba8f185448c470ca41442429caddd";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm,s);})();
 	function getParam(paramName) {
         paramValue = "", isFound = !1;
         if (this.location.search.indexOf("?") == 0 && this.location.search.indexOf("=") > 1) {
@@ -882,5 +881,8 @@ var _hmt=_hmt||[];(function(){var hm=document.createElement("script");hm.src="ht
       }
       document.getElementById("g" + getParam("select")).className+=" layui-show";
     </script>
+	<script>
+		var _hmt=_hmt||[];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?a60ba8f185448c470ca41442429caddd";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm,s);})();
+	</script>
   </body>
 </html>
