--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@ i.layui-colla-icon {font-size: 110%}
 fieldset.layui-elem-field.layui-field-title {margin: 0 0 0 0}
 div.layui-layer.layui-layer-dialog {width: 600px !important}</style>
 <script src="/layui/layui.all.js" type="text/javascript"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+	     (adsbygoogle = window.adsbygoogle || []).push({
+	               google_ad_client: "ca-pub-5292264497365218",
+	               enable_page_level_ads: true
+          });
+</script>
   </head>
   <body>
     <blockquote class="layui-elem-quote">
